docs/docusaurus/src/components/WasThisHelpful/styles.module.css
/* CSS for the Feedback Card */

.feedbackDivider {
    border-top: 1px solid var(--gray-400);
    margin-top: 3rem;
    margin-bottom: 3em;
}

.feedbackCard {
    background-color: var(--gray-100);
    border: 1px solid var(--gray-200);
    border-radius: 6px;
    box-shadow: 0 3px 6px -1px var(--gray-300);

    display: flex;
    flex-direction: row;
    gap: 1.5rem;
    margin: auto;
    padding: 0.75rem;
    width: 100%;
    max-width: 30rem;
    justify-content: center;
    align-items: center;
}

.feedbackCardTitle {
    font-size: var(--p-font-size);
    font-weight: var(--ifm-font-weight-semibold);
    margin: 0;
}

.feedbackCardActions{
    display: flex;
    gap: 0.5rem;
}

.feedbackButton {
    border-color: var(--ifm-color-primary);
    background: none;
    border: 1px solid var(--ifm-color-primary);
    border-radius: 50rem;
    color: var(--ifm-color-primary);
    cursor: pointer;
    font-size: var(--p-md-font-size);
    font-weight: var(--ifm-font-weight-semibold);
    padding: 0.25rem;
    text-align: center;
    min-width: 4.5rem;
}

.feedbackButton:hover {
    background: var(--orange-100);
    color: var(--ifm-color-primary);
}

.inactiveFeedbackButton {
    background: var(--gray-200);
    border: 1px solid transparent;
    border-radius: 50rem;
    color: var(--gray-500);
    font-size: var(--p-font-size);
    font-weight: var(--ifm-font-weight-semibold);
    padding: 0.25rem;
    text-align: center;
    min-width: 4.5rem;
}

/* CSS for the Feedback Modal */

.overlay {
    background-color: rgba(0, 0, 0, 0.3);
    height: 100vh;
    left: 0;
    position: fixed;
    top: 0;
    width: 100vw;
    z-index: calc(var(--ifm-z-index-fixed) + 1);
}

.modal {
    background: var(--white);
    border: 3px solid #272763;
    border-radius: 10px;
    box-shadow: 0 3px 6px -1px rgb(0,0,0,0.1);
    color: var(--white);

    left: 50%;
    position: fixed;
    top: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    max-width: 700px;
    max-height: 80vh;
    z-index: calc(var(--ifm-z-index-fixed) + 2);
}

.modalHeader {
    align-items: center;
    background-color: #272763;
    color: white;
    display: flex;
    margin: 0;
    padding: 10px;
    overflow: hidden;
}

.modalHeaderTitle {
    flex: 1;
    text-align: center;
}

.modalHeaderCloseButton {
    align-self: flex-end;
    cursor: pointer;
    height: 8px;
    margin: auto;
}

.modalContent {
    padding: 1rem 2rem;
    color: var(--ifm-font-color-base);
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}

.textInputs{
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    gap: 2rem;
}

.modalTextContainer {
    display: flex;
    flex-direction: column;
    position: relative;
    flex: 1;
}

.modalTextLabel {
    font: var(--ifm-font-size-base) var(--ifm-font-family-base);
    font-size: 0.75rem;
    font-weight: bold;
    color: var(--gray-700);
    margin-bottom: 0.25rem;
}

.modalTextInput {
    border: 1px solid var(--gray-700);
    border-radius: 20px;
    font: var(--ifm-font-size-base) var(--ifm-font-family-base);
    height: 2.25rem;
    padding: 0.75rem;
    outline: none;
    color: var(--ifm-font-color-base);
}

.modalTextareaInput {
    min-height: 10rem;
}

.modalTextareaInput:invalid:focus {
    border: 2px solid navy;
}

.modalTextInput:active, .modalTextInput:focus, .modalTextInput:hover {
    border: 1px solid var(--ifm-color-primary);
}

.submitButton {
    border-radius: 20px;
    background-color: var(--ifm-color-primary);
    font-weight: bold;
    color: white;
    border: none;
    cursor: pointer;
    transition: background-color 0.3s ease;
    padding: 0.75rem;
    margin: 1rem 0 2rem;
}

.submitButton:hover {
    background-color: #DE550A;
}

@media (max-width: 960px) {
    .centered {
        max-height: 100vh;
    }
}

